--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "kiswitch"]
 	path = kiswitch
 	url = https://github.com/kiswitch/kiswitch
+[submodule "kicad-lib"]
+	path = kicad-lib
+	url = https://github.com/mcous/kicad-lib/
